visibility fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,14 +6,10 @@
 .mat-sidenav-container {
   height: 100vh;
   display: flex;
-  z-index: 4;
 }
 
-.mat-drawer {
-  z-index: 2;
-}
 .toggle-button {
-  position: absolute;
+  position: fixed;
   top: 5px;
   left: 5px;
   z-index: 3;
